[gd_scene load_steps=5 format=3 uid="uid://dit68dvly67oq"]

[ext_resource type="Script" path="res://scripts/dead.gd" id="1_jv4nm"]
[ext_resource type="PackedScene" uid="uid://cvt0o81tq5nv6" path="res://scenes/hud.tscn" id="2_om6wg"]
[ext_resource type="FontFile" uid="uid://debarldh10cmi" path="res://fonts/80s-retro-future.ttf" id="2_xg5q5"]
[ext_resource type="AudioStream" uid="uid://dwgjrpufy708t" path="res://Audio/Gameover.mp3" id="3_tiop4"]

[node name="dead" type="Node2D"]
script = ExtResource("1_jv4nm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 457.0
offset_top = 260.0
offset_right = 631.0
offset_bottom = 388.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xg5q5")
text = "You Died"
horizontal_alignment = 1

[node name="main" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xg5q5")
text = "Return to main menu"

[node name="Try again" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xg5q5")
text = "Try again"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xg5q5")
text = "Quit"

[node name="Hud" parent="." instance=ExtResource("2_om6wg")]

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tiop4")
volume_db = 10.0

[connection signal="pressed" from="VBoxContainer/main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="VBoxContainer/Try again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
